# Mathician

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/Pull Requests/: pull_request_template.md
.github/workflows/: autoassigntoprojects_issueandprs.yml  codeql.yml  python-publish.yml  super-linter.yml
Code/: CHANGELOG.txt  LICENSE.txt  readme.md  readme.txt  setup.py
Code/mathician/: __init__.py
examples/: add.py  addition.py  celsius_to_fahrenheit.py  divide.py  fahrenheit_to_celsius.py  integrate.py  multiply.py  roots.py  square.py  squareroot.py  subtract.py
examples/mathician.js/: add.js  celsius_to_fahrenheit.js  divide.js  fahrenheit_to_celsius.js  floor.js  log.js  multiply.js  square.js  squareroot.js  subtract.js
guide/: readme.md
guide/help_downloads/: install_mathician.md  readme_downloads.md  readme_upgrades.md
guide/help_downloads/mathician.js/: install_mathicianjs.md  update_version.md
help_downloads/: readme_upgrades.md
logos/: README.md  mathician_logo.md
mathician.js/: README.md
mathician.js/Code/: index.ts  package.json
src/mathician/: __init__.py
