[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Mathician"
version = "1.5.0"
authors = [
    { name="Arjun Sharda", email="sharda.aj17@gmail.com" },
]
description = "Mathician is a math package that uses the math library (some of it) and built with Python math classes."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArjunSharda/Mathician"
"Bug Tracker" = "https://github.com/ArjunSharda/Mathician/issues"
